--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:8080/baza
+spring.datasource.url=jdbc:mysql://localhost:3306/8080baza
 spring.datasource.username=zamjeni
 spring.datasource.password=zamjeni
 
