--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/8080baza
-spring.datasource.username=zamjeni
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=root
 spring.datasource.password=zamjeni
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+app.jwt-secret=dodaj secret
