--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
-spring.datasource.password=zamjeni
+spring.datasource.password=giogiogio2314
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
