dodat roleguard i bugovi fixani

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,3 +9,5 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web.filter=DEBUG
 spring.output.ansi.enabled=ALWAYS
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# ZA LINUX
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
