--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/projekat
 spring.datasource.username=root
-spring.datasource.password=zamjeni
+spring.datasource.password=giogiogio2314
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.profiles.active = dev
@@ -10,4 +10,4 @@ logging.level.org.springframework.web.filter=DEBUG
 spring.output.ansi.enabled=ALWAYS
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # ZA LINUX
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
