--- a/biblioteka-service/src/main/resources/application.properties
+++ b/biblioteka-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=biblioteka-service
 spring.datasource.url=jdbc:mysql://localhost:3306/biblioteka
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=giogiogio2314
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.profiles.active = dev
