--- a/osoblje/src/main/resources/application.properties
+++ b/osoblje/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=osoblje
-spring.datasource.url=jdbc:mysql://localhost:3306/osoblje
+spring.datasource.url=jdbc:mysql://localhost:3306/new_schema?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
