--- a/student-service/src/main/resources/application.properties
+++ b/student-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=student-service
 spring.datasource.url=jdbc:mysql://localhost:3306/new_schema?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=giogiogio2314
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.profiles.active = dev
